--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
-<title>服务暂未开启</title>
-<!--
-<meta http-equiv="refresh" content="0; URL=https://www.bilibili.com/video/BV1GJ411x7h7/">
-<link rel="canonical" href="https://www.bilibili.com/video/BV1GJ411x7h7/">
--->
-<h1>服务暂未开启</h1>
+<title>正在跳转</title>
+<meta http-equiv="refresh" content="0; URL=http://yhncfh.natappfree.cc/index.html">
+<link rel="canonical" href="http://yhncfh.natappfree.cc/index.html">
+<h1>正在跳转，如未跳转请手动点击<a href="http://yhncfh.natappfree.cc/index.html">这里</a></h1>
